:sparkle: Add chisquare option for D

--- a/urand/config_default.yaml
+++ b/urand/config_default.yaml
@@ -3,8 +3,8 @@ db: sqlite:///urn-randomization.db
 w: 1
 alpha: 0
 beta: 1
-# Possible values include range or variance
-D: range
+# Possible values include range, chisquare or variance
+D: chisquare
 # Method 1 sets p=1 for urn with largest value of D, with random selection in
 # case of tied values
 urn_selection: method1
