--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,19 @@
             [male, female]
 
 "CHS JCOIN HUB":
+
+    # Default values
+    # db: sqlite:///urn-randomization.db
+    # w: 0
+    # alpha: 0
+    # beta: 1
+    # starting_seed:
+    # Possible values include range or variance
+    # D: range
+    # Method 1 sets p=1 for urn with largest value of D, with random selection in
+    # case of tied values
+    # urn_selection: method1
+
     starting_seed: 100
     treatments:
         - MART
