--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ bleach==3.3.0
 blinker==1.4
 bokeh==2.3.0
 brotlipy==0.7.0
+bootstrap-flask==1.8.0
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -21,7 +22,6 @@ commonmark==0.9.1
 confuse==1.4.0
 cryptography==3.3
 cycler==0.10.0
-datatables==0.4.9
 decorator==4.4.2
 defusedxml==0.6.0
 deprecation==2.1.0
@@ -32,7 +32,6 @@ email-validator==1.1.2
 entrypoints==0.3
 flake8==3.8.4
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
 Flask-Dance==5.1.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
@@ -57,33 +56,37 @@ json5==0.9.5
 jsonschema==3.2.0
 jupyter-client==6.1.7
 jupyter-contrib-core==0.3.3
-jupyter-core==4.7.1
+jupyter_core==4.7.1
 jupyter-nbextensions-configurator==0.4.1
-jupyter-server==1.3.0
-jupyterlab==3.0.7
-jupyterlab-server==2.2.0
+#jupyter-server==1.3.0
+jupyter_server
+# jupyterlab==3.0.7
+jupyterlab
+# jupyterlab-server==2.2.0
+jupyterlab-server
 jupyterlab-widgets==1.0.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.6.0
 lazyConfig==0.5
 Markdown==3.3.4
 MarkupSafe==1.1.1
-matplotlib==3.3.0
+matplotlib
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.2.0
-mkl-service==2.3.0
+# mkl_fft==1.3.1
+# mkl-service==2.3.0
 more-itertools==8.6.0
-nbclassic==0.2.6
-nbconvert==5.6.1
-nbformat==5.1.2
+nbclassic
+nbconvert
+nb_conda_kernels
+nbformat
 nose==1.3.7
-notebook==6.2.0
-numpy==1.19.2
+notebook
+numpy
 oauthlib==3.2.0
 olefile==0.46
 packaging==20.9
-pandas==1.2.1
+pandas
 pandocfilters==1.4.3
 panel==0.11.0
 param==1.10.1
@@ -92,7 +95,7 @@ pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.0
-pip==20.3.3
+pip
 pluginbase==1.0.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
@@ -144,7 +147,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.21
 sqlalchemy-datatables==2.0.1
-SQLAlchemy-Utils==0.36.8
+SQLAlchemy-Utils
 terminado==0.9.2
 testpath==0.4.4
 toml==0.10.2
